--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 </div>
 
 <script src="js/jquery-2.2.3.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/game.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/player.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
