--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 	  <header>
 	    <h1>Tic Tac Toe</h1>
 	    <a href="#" class="button">Start game</a>
+			<div>
+				<ul>
+					<li style="width:50%;float:left">
+								<h2>Player 1</h2>
+								<input id="player1Name">
+					</li>
+					<li style="width:50%;float:left">
+								<h2>Player 2</h2>
+								<input id="player2Name">
+					</li>
+			</ul>
+		  </div>
 	  </header>
 	</div>
 
